--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>404 not found</title>
+    <title>welcome</title>
   </head>
   <body>
     <h1>404 not found</h1>
+    <p><a href="https://nomaakip.github.io/sigma">check out this!</p>
   </body>
 </html>
