--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>404 not found</h1>
-    <p><a href="https://nomaakip.github.io/sigma">check out this!</p>
+    <p><a href="https://github.com/Nomaakip/starlion-lol/raw/main/Starlion%20Send%20main.zip">get starlion!</p>
   </body>
 </html>
