--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
   <head>
     <title>welcome</title>
   </head>
+  <style>
+    body {
+      background-color: rgb(139, 196, 32);
+    }
+   h1 {
+     text-align: center;
+     font-size: 80px
+   }
+   h2 {
+    text-align: center;
+    font-size: 20px;
+    color: rgb(238, 8, 27);
+   }
+    p {
+      text-align: center;
+      font-size: 17px;
+    }
+  </style>
   <body>
     <h1>404 not found</h1>
-    <p><a href="https://github.com/Nomaakip/starlion-lol/raw/main/Starlion%20Send%20main.zip">get starlion!</p>
+<h2>Lmao, The Gay ah Squirrel was here :3</h2>
+<p><a href="https://github.com/Nomaakip/starlion-lol/raw/main/Starlion%20Send%20main.zip">get starlion!</p>
   </body>
 </html>
