--- a/sigma.html
+++ b/sigma.html
@@ -4,4 +4,7 @@
 <head>
 <title>sigma</title>
 </head>
+<body>
+  <p><a href="nomaakip.github.io/306a235897b46ba229ae22759521ddcc.jpg"</p>
+</body>
 </html>
