--- a/sigma.html
+++ b/sigma.html
@@ -5,6 +5,6 @@
 <title>sigma</title>
 </head>
 <body>
-  <p><a href="nomaakip.github.io/306a235897b46ba229ae22759521ddcc.jpg"</p>
+  <p><a href="nomaakip.github.io/306a235897b46ba229ae22759521ddcc.jpg"</a></p>
 </body>
 </html>
