--- a/sigma.html
+++ b/sigma.html
@@ -8,6 +8,6 @@
   <h1>erm</h1>
   <h2>erm</h2>
   <p><a href="index.html"<button>ima find u frfr</button></a></p>
-  <img src="nomaakip.github.io/306a235897b46ba229ae22759521ddcc.jpg" width="120" height="90" alt="HTML Dog">
+  <img src="images/sadcat.jpg" width="120" height="90" alt="HTML Dog">
 </body>
 </html>
