--- a/sigma.html
+++ b/sigma.html
@@ -7,7 +7,9 @@
 <body>
   <h1>erm</h1>
   <h2>erm</h2>
-  <p><a href="index.html"<button>ima find u frfr</button></a></p>
+  <a href="index.html"
+    <button>erm</button>
+  </a>
   <img src="images/sadcat.jpg" width="120" height="90" alt="HTML Dog">
 </body>
 </html>
