--- a/sigma.html
+++ b/sigma.html
@@ -8,6 +8,7 @@
     <img src="images/sadcat.jpg" width="120" height="90" alt="HTML Dog">
   <h1>erm</h1>
   <h2>erm</h2>
+    <img src="images/sadcat.jpg" width="120" height="90" alt="HTML Dog">
   <a href="index.html">
     <button>erm</button>
   </a>
