--- a/sigma.html
+++ b/sigma.html
@@ -5,10 +5,10 @@
 <title>sigma</title>
 </head>
 <body>
-    <img src="images/sadcat.jpg" width="120" height="90" alt="HTML Dog">
   <h1>erm</h1>
   <h2>erm</h2>
-    <img src="images/sadcat.jpg" width="120" height="90" alt="HTML Dog">
+    <img src="images/sadcat.jpg" width="120" height="90" alt="cat">
+    
   <a href="index.html">
     <button>erm</button>
   </a>
