--- a/sigma.html
+++ b/sigma.html
@@ -10,7 +10,9 @@
     <img src="images/sadcat.jpg" width="120" height="90" alt="cat">
     
   <a href="index.html">
+    <footer>
     <button>erm</button>
+    </footer>footer>
   </a>
 </body>
 </html>
