--- a/sigma.html
+++ b/sigma.html
@@ -8,7 +8,7 @@
 <body>
   <h1>erm</h1>
   <h2>erm</h2>
-    <img src="images/sadcat.jpg" width="120" height="90" alt="cat">
+    <img src="images/LeftCat.png" width="120" height="90" alt="cat">
 
 <footer>
   <a href="index.html">
