--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>ok</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap" rel="stylesheet">
+    <style>
+.jacquarda-bastarda-9-regular {
+  font-family: "Jacquarda Bastarda 9", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+h1,h2 {
+  text-align: center;
+}
+    </style>
+    <title>About nomaakip</title>
   </head>
+  <body>
+    <h1>Hi,Im nomaakip!</h1>
+    <h2>i like to make websites or to make some cool shit with C++!</h2>
+  </body>
 </html>
