--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap" rel="stylesheet">
     <style>
+
+@import url('https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap');
+
 h1,h2,a {
   text-align: center;
 }
@@ -23,6 +23,6 @@ h1,h2,a {
   <body>
     <h1>Hi,Im nomaakip!</h1>
     <h2>i like to make websites or to make some cool shit with C++!</h2>
-    <a href="https://cdn.discordapp.com/attachments/1192609733371236432/1287118843319287983/2a78eee506a1c88c6af572adb374e303.png?ex=66f3ae15&is=66f25c95&hm=b73eed921c3f2c7cc602b46ae53f59bbda6a58877053530371f035d80966f2a7&" height="500" width="300"></a>
+    <img src="https://cdn.discordapp.com/attachments/1192609733371236432/1287118843319287983/2a78eee506a1c88c6af572adb374e303.png?ex=66f3ae15&is=66f25c95&hm=b73eed921c3f2c7cc602b46ae53f59bbda6a58877053530371f035d80966f2a7&" height="500" width="300">
   </body>
 </html>
