--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap');
 
-h1,h2,a {
+h1,h2 {
+  text-align: center;
+}
+
+img {
   text-align: center;
 }
 
