--- a/index.html
+++ b/index.html
@@ -3,30 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device width, initial-scale=1.0" />
-    <style>
-
-@import url('https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap');
-
-h1,h2 {
-  text-align: center;
-}
-
-img {
-  text-align: center;
-}
-
-.jacquarda-bastarda-9-regular {
-  font-family: "Jacquarda Bastarda 9", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-    </style>
     <title>About nomaakip</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet"/>
   </head>
   <body>
     <h1>Hi,Im nomaakip!</h1>
     <h2>i like to make websites or to make some cool shit with C++!</h2>
-    <img src="https://cdn.discordapp.com/attachments/1192609733371236432/1287118843319287983/2a78eee506a1c88c6af572adb374e303.png?ex=66f3ae15&is=66f25c95&hm=b73eed921c3f2c7cc602b46ae53f59bbda6a58877053530371f035d80966f2a7&" height="500" width="300">
+    <img src="https://cdn.discordapp.com/attachments/1192609733371236432/1287118843319287983/2a78eee506a1c88c6af572adb374e303.png?ex=66f3ae15&is=66f25c95&hm=b73eed921c3f2c7cc602b46ae53f59bbda6a58877053530371f035d80966f2a7&" height="200" width="200">
   </body>
 </html>
