--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet"/>
+    <style>
+      body {
+    background-image: url(images/landscape.jpg);  
+    background-color: #ed2bff;
+   background-size: cover;
+}
+
+h1,h2 {
+    text-align: center;
+  }
+  
+  img {
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+h1, h2 {
+    font-family: "Jacquarda Bastarda 9", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+    </style>
   </head>
   <body>
     <h1>Hi,Im nomaakip!</h1>
