--- a/index.html
+++ b/index.html
@@ -28,12 +28,22 @@ h1, h2 {
     font-family: "Jacquarda Bastarda 9", serif;
     font-weight: 400;
     font-style: normal;
+    
+  }
+  h3 {
+    font-family: "Jacquarda Bastarda 9", serif;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+    color: #ddf508;
   }
     </style>
   </head>
   <body>
     <h1>Hi,Im nomaakip!</h1>
     <h2>i like to make websites or to make some cool shit with C++!</h2>
+    <h3>Squirrel was here :3</h3>
     <img src="https://cdn.discordapp.com/attachments/1192609733371236432/1287118843319287983/2a78eee506a1c88c6af572adb374e303.png?ex=66f3ae15&is=66f25c95&hm=b73eed921c3f2c7cc602b46ae53f59bbda6a58877053530371f035d80966f2a7&" height="200" width="200">
+    <script src="index.js"></script>
   </body>
 </html>
