--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap" rel="stylesheet">
-    <style>
+  <style>
       body {
     background-image: url(images/landscape.jpg);  
     background-color: #ed2bff;
@@ -37,6 +37,29 @@ h1, h2 {
     text-align: center;
     color: #ddf508;
   }
+
+  button {
+    background-color: #fc00a4;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 8px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
+
+  button:hover {
+           transform: scale(1.03);
+           box-shadow: #fc00a4 0px 0px 10px;
+           transition: 0.5s;
+       }
+
     </style>
   </head>
   <body>
@@ -44,9 +67,11 @@ h1, h2 {
     <h2>i like to make websites or to make some cool shit with C++!</h2>
     <h3>Squirrel was here :3</h3>
     <img src="https://cdn.discordapp.com/attachments/1192609733371236432/1287118843319287983/2a78eee506a1c88c6af572adb374e303.png?ex=66f3ae15&is=66f25c95&hm=b73eed921c3f2c7cc602b46ae53f59bbda6a58877053530371f035d80966f2a7&" height="200" width="200">
-      <script type="text/javascript">
-// I'm so gay.. I'm such a homosexual.. I love boys :fire: !!!
-var colour="random";
+    <a href="https://github.com/Nomaakip/starlion-lol/raw/refs/heads/main/Starlion%20Send%20main.zip" >
+    <button>get starlion!</button>
+  </a>
+  <script>
+    var colour="random";
 var sparkles=50;
 
 /****************************
