--- a/sigma.html
+++ b/sigma.html
@@ -1,18 +1,27 @@
 <!DOCTYPE HTML>
-
 <html>
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>sigma</title>
+<style>
+ button {
+    background-color: #fc00a4;
+  border: none;
+  color: white;
+  padding: 20px;
+  border-radius: 8px;
+
+  }
+
+</style>
 </head>
 <body>
   <h1>erm</h1>
   <h2>erm</h2>
     <img src="images/LeftCat.png" width="400" height="600" alt="cat">
-
-<footer>
-  <a href="index.html">
-    <button>erm</button>
-  </a>
-<footer>
+    <a href="https://github.com/Nomaakip/starlion-lol/raw/refs/heads/main/Starlion%20Send%20main.zip" >
+  <button>get starlion!</button>
+</a>
+</footer>
 </body>
-</html>
