--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ h1, h2 {
     </style>
   </head>
   <body>
+    <embed src="music/eshop.mp3" loop="true" autostart="true" width="2" height="0">
     <h1>Hi,Im nomaakip!</h1>
     <h2>i like to make websites or to make some cool shit with C++!</h2>
     <h3>Squirrel was here :3</h3>
