added new buttons

--- a/index.html
+++ b/index.html
@@ -18,28 +18,23 @@
    background-size: cover;
 }
 
-h1,h2 {
-    text-align: center;
-  }
-  
   img {
     display:block;
     margin-left: auto;
     margin-right: auto;
   }
   
-h1, h2 {
+h1, h2, p {
     font-family: "Jacquarda Bastarda 9", serif;
     font-weight: 400;
     font-style: normal;
-    
+    text-align: center;
   }
   h3 {
     font-family: "Jacquarda Bastarda 9", serif;
     font-weight: 400;
     font-style: normal;
     text-align: center;
-    color: #ddf508;
   }
 
   .button {
@@ -70,17 +65,27 @@ h1, h2 {
     </style>
   </head>
   <body>
+    <div class="desc">
     <embed src="music/eshop.mp3" loop="true" autostart="true" width="2" height="0">
     <h1>Hi,Im nomaakip!</h1>
     <h2>i like to make websites or to make some cool shit with C++!</h2>
-    <h3>Squirrel was here :3</h3>
     <img src="https://cdn.discordapp.com/attachments/1192609733371236432/1287118843319287983/2a78eee506a1c88c6af572adb374e303.png?ex=66f3ae15&is=66f25c95&hm=b73eed921c3f2c7cc602b46ae53f59bbda6a58877053530371f035d80966f2a7&" height="200" width="200">
 
-    <a href="https://github.com/Nomaakip/starlion-lol/raw/refs/heads/main/Starlion%20Send%20main.zip" >
+    <a href="https://freakybob.site" >
       <center>
-    <button class="button">get starlion!</button>
+    <button class="button">Check out freakybob.site!</button>
     </center>
   </a>
+  <p>Or...</p>
+  <a href="https://github.com/nomaakip" >
+    <center>
+  <button class="button">Check Out My Github page!</button>
+  </center>
+</a>
+  <footer>
+     <h3>Thanks to squirrel for fixing the background image and some of my code!</h3>
+  </footer>
+  </div>
   <script>
     var colour="random";
 var sparkles=50;
