--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ h1, h2, p {
     <embed src="music/eshop.mp3" loop="true" autostart="true" width="2" height="0">
     <h1>Hi,Im nomaakip!</h1>
     <h2>i like to make websites or to make some cool shit with C++!</h2>
-    <img src="https://cdn.discordapp.com/attachments/1192609733371236432/1287118843319287983/2a78eee506a1c88c6af572adb374e303.png?ex=66f3ae15&is=66f25c95&hm=b73eed921c3f2c7cc602b46ae53f59bbda6a58877053530371f035d80966f2a7&" height="200" width="200">
+    <img src="images/agent4.png" height="200" width="200">
    <!--squirrel please fix the buttons-->
     <a href="https://freakybob.site" >
       <center>
