--- a/greg.html
+++ b/greg.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;700&display=swap" rel="stylesheet">
         <title>greg</title>
         <style>
         body {
@@ -10,11 +13,24 @@
             }
 
             h1 {
+                font-family: "Comic Neue", cursive;
+                font-weight: 700;
+                font-style: normal;
                 text-align: center;
             }
+
+            img {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
         </style>
     </head>
     <body>
+        <div class="greg">
         <h1>greg</h1>
+        <img src="images/sigmacatinreallife.gif" alt="cat" height="300" width="700">
+    </div>
     </body>
 </html>
