--- a/greg.html
+++ b/greg.html
@@ -23,7 +23,32 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
+            }  
+
+            .button {
+                    font-family: "Comic Neue", cursive;
+                    font-weight: 700;
+                    font-style: normal;
+                    font-style: normal;
+                    background-color: #fc00a4;
+                    border: none;
+                    color: white;
+                    padding: 20px;
+                    text-align: center;
+                    text-decoration: none;
+                    display: inline-block;
+                    font-size: 16px;
+                    margin: 4px 2px;
+                    border-radius: 8px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    transition: 0.5s;
             }
+  .button:hover {
+           transform: scale(1.1);
+           box-shadow: #fc00a4 0px 0px 10px;
+       }
+
 
         </style>
     </head>
@@ -31,6 +56,10 @@
         <div class="greg">
         <h1>greg</h1>
         <img src="images/sigmacatinreallife.gif" alt="cat" height="300" width="700">
+        <a href="index.html">
+        <center>
+            <button class="button">Go Back To Main Website!</button>
+        </a>
     </div>
     </body>
 </html>
