--- a/greg.html
+++ b/greg.html
@@ -58,7 +58,7 @@
         <img src="images/sigmacatinreallife.gif" alt="cat" height="300" width="700">
         <a href="index.html">
         <center>
-            <button class="button">Go Back To Main Website!</button>
+            <button class="button">Go Back To Main Page!</button>
         </a>
     </div>
     </body>
