--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ h1, h2, p {
    <!--squirrel please fix the buttons-->
     <a href="https://freakybob.site" >
       <center>
-    <button class="button">Check out freakybob.site by squirrel!</button>
+    <button class="button">Check out freakybob.site by the Freakybob Team!</button>
     </center>
   </a>
   <p>Or</p>
