--- a/greg.html
+++ b/greg.html
@@ -56,10 +56,12 @@
         <div class="greg">
         <h1>greg</h1>
         <img src="images/sigmacatinreallife.gif" alt="cat" height="300" width="700">
-        <a href="index.html">
         <center>
+        <a href="index.html">
             <button class="button">Go Back To Main Page!</button>
         </a>
+        </center>
+        <h4>ok</h4>
     </div>
     </body>
 </html>
