--- a/index.html
+++ b/index.html
@@ -38,21 +38,29 @@ h1, h2, p {
   }
 
   .button {
+  display: block;
+  align-items: center;
+  justify-content: center;
     font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
     background-color: #fc00a4;
   border: none;
+  border-color: none;
   color: white;
   padding: 20px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
+  text-decoration:none;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 1em auto;
   border-radius: 8px;
   transition: 0.5s;
+  }
+
+  .freakybob,
+  .github {
+    text-decoration : none;
   }
 
   .button:hover {
@@ -63,22 +71,17 @@ h1, h2, p {
     </style>
   </head>
   <body>
-    <div class="desc">
+    <div id="desc" class="desc">
     <embed src="music/eshop.mp3" loop="true" autostart="true" width="2" height="0">
     <h1>Hi,Im nomaakip!</h1>
     <h2>i like to make websites or to make some cool shit with C++!</h2>
     <img src="images/agent4.png" height="200" width="200">
-   <!--squirrel please fix the buttons-->
-    <a href="https://freakybob.site" >
-      <center>
+    <a href="https://freakybob.site" class="freakybob">
     <button class="button">Check out freakybob.site by the Freakybob Team!</button>
-    </center>
   </a>
   <p>Or</p>
-  <a href="https://github.com/nomaakip" >
-    <center>
+  <a href="https://github.com/nomaakip" class="github">
   <button class="button">Check Out My Github page!</button>
-  </center>
 </a>
   <footer>
      <h3>Thanks to squirrel for fixing the background image and some of my code!</h3>
