buttons kinda fixed ig?

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@ h1, h2, p {
   .github {
     text-decoration : none;
   }
+  
+  a{
+    text-decoration: none;
+  }
 
   .button:hover {
            transform: scale(1.1);
@@ -76,17 +80,12 @@ h1, h2, p {
     <h1>Hi,Im nomaakip!</h1>
     <h2>i like to make websites or to make some cool shit with C++!</h2>
     <img src="images/agent4.png" height="200" width="200">
-   <!--squirrel please fix the buttons-->
-    <a href="https://freakybob.site" >
-      <center>
+    <a href="https://freakybob.site" class="freakybob" >
     <button class="button">Check out freakybob.site by the Freakybob Team!</button>
   </a>
-   </center>
   <p>Or</p>
-  <a href="https://github.com/nomaakip" >
-    <center>
+  <a href="https://github.com/nomaakip" class="github">
   <button class="button">Check Out My Github page!</button>
-  </center>
 </a>
   <footer>
      <h3>Thanks to squirrel for fixing the background image and some of my code!</h3>
