--- a/testing.html
+++ b/testing.html
@@ -23,19 +23,16 @@ button {
     width: 100%;
 }
 
-.index-button {
-    font-family: "Comic Neue", cursive;
-  font-weight: 700;
-  font-style: normal;
-    margin: auto;
-    display: block;
-
+button:hover {
+    background-color: rgb(218, 203, 3);
+    transform: translateY(-3px) scale(1.05);
 }
+
         </style>
     </head>
     <body>
         <div class="button">
-       <a href="index.html"id="main"><button class="index-button">button</button></button></a>
+       <a href="index.html"id="main"><button>button</button></button></a>
         </div>
     </body>
 </html>
