--- a/greg.html
+++ b/greg.html
@@ -61,7 +61,7 @@
             <button class="button">Go Back To Main Page!</button>
         </a>
         </center>
-        <h4>ok</h4>
+        <h1>greg !!</h1>
     </div>
     </body>
 </html>
