--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@ h1, h2, p {
   }
 
   .button {
-  display: block;
-  align-items: center;
-  justify-content: center;
     font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
@@ -80,13 +77,17 @@ h1, h2, p {
     <h1>Hi,Im nomaakip!</h1>
     <h2>i like to make websites or to make some cool shit with C++!</h2>
     <img src="images/agent4.png" height="200" width="200">
+    <center>
     <a href="https://freakybob.site" class="freakybob" >
     <button class="button">Check out freakybob.site by the Freakybob Team!</button>
   </a>
+  </center>
   <p>Or</p>
+  <center>
   <a href="https://github.com/nomaakip" class="github">
   <button class="button">Check Out My Github page!</button>
 </a>
+  </center>
   <footer>
      <h3>Thanks to squirrel for fixing the background image and some of my code!</h3>
   </footer>
