--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ h1, h2, p {
 </a>
   </center>
   <footer>
-     <h3>Thanks to squirrel for fixing the background image and some of my code!</h3>
+     <h3>Background image is broken especially on mobile,will fix it later.</h3>
   </footer>
   </div>
   <script>
