--- a/newindex.html
+++ b/newindex.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>new index</title>
+        <style>
+            .balls {
+                text-align: center;
+                font-size: 30px;
+            }
+            
+            .desc {
+                text-align: center;
+            }
 
+            .projects {
+                background-color: darkblue;
+                margin: 0px;
+            }
+
+            .test {
+                font-size: 30px;
+                text-align: center;
+                margin: 0px 0px;
+                
+            }
+
+            .hell-yeah {
+                background-color: brown;
+                margin: 0px;
+            }
+        </style>
+    </head>
+    <body>
+<section class="desc">
+        <h1 class="balls">Check out my projects!</h1>
+        </section>
+        <section class="projects">
+            <p class="test">nothing</p>
+    </section>
+    <section class="hell-yeah">
+                <p class="test">penis</p>
+                </section>
+    </body>
+</html>
