--- a/greg.html
+++ b/greg.html
@@ -54,7 +54,7 @@
     </head>
     <body>
         <div class="greg">
-        <h1>greg</h1>
+        <h1>greg!!</h1>
         <img src="images/sigmacatinreallife.gif" alt="cat" height="300" width="700">
         <center>
         <a href="index.html">
