--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ h1, h2, p {
 </a>
   </center>
   <footer>
-     <h3>Might rewrite the whole website,it looks so shit</h3>
+     <h3>rewriting the website, may take some time</h3>
   </footer>
   </div>
   <script>
