--- a/testing.html
+++ b/testing.html
@@ -32,7 +32,7 @@ button:hover {
     </head>
     <body>
         <div class="button">
-       <a href="index.html"id="main"><button>button</button></button></a>
+       <a href="index.html"id="main"><button></button></button></a>
             <h1>hell yeah</h1>
         </div>
     </body>
