--- a/newindex.html
+++ b/newindex.html
@@ -27,6 +27,12 @@
                 <img class="blog1img" src="https://pikidiary.lol/helloschooldistrict?url=https%3A%2F%2Ff.feridinha.com%2F0nebX.png">
                 </div>
             </a>
+        </div>
+            <div class="div">
+                <h1 class="hello">Link me:</h1>
+                <textarea readonly>placeholder :3</textarea>
+                <p class="p-desc">Button preview:</p>
+                <img src="images/Nouveau projet.png" class="button-preview">
             </div>
         </body>
 </html>
