--- a/newindex.html
+++ b/newindex.html
@@ -30,9 +30,9 @@
         </div>
             <div class="div">
                 <h1 class="hello">Link me:</h1>
-                <textarea readonly>placeholder :3</textarea>
+                <textarea readonly><a href="https://nomaakip.neocities.org" target="_blank"><img src="https://raw.githubusercontent.com/Nomaakip/Nomaakip.github.io/refs/heads/main/images/Nouveau%20projet.png"></a></textarea>
                 <p class="p-desc">Button preview:</p>
-                <img src="images/Nouveau projet.png" class="button-preview">
+                <a href="https://nomaakip.neocities.org" class="button-link" target="_blank"><img src="https://raw.githubusercontent.com/Nomaakip/Nomaakip.github.io/refs/heads/main/images/Nouveau%20projet.png" class="button-preview"></a>
             </div>
         </body>
 </html>
