--- a/newindex.html
+++ b/newindex.html
@@ -11,10 +11,13 @@
         </head>
         <body>
             <div class="div">
-                <div class="navbar">
-                    <a href="newindex.html" class="about">About</a>
-                    <a href="newindex.html" class="projects"><img src="images/Regedit.png" height="50" width="50" id="Regedit">Projects</a>
+                <div class="navbar" style="position: relative; float: left; margin-left:0px; margin-top:-2px; margin-right:5px; padding-top: 20px;">
+                    <img src="images/pngegg.png" height="32" width="32" alt="about" class="abt-img"> 
                 </div>
+                <div style="position: relative; margin-left:0px; margin-top:-22px; margin-right:5px; padding-top: 20px;">
+                    <a href="newindex.html" class="about">
+                    <strong >Info</strong></a>
+            </div>
                 <div class="warning">
                     <h1 class="h1-warning">⚠️ This page is currently under construction. Expect a lot more content to be added as time passes.If you find any bugs,please report them <a href="https://github.com/Nomaakip/Nomaakip.github.io/issues" class="issues">here</a>.</h1>
                 </div>
@@ -28,11 +31,6 @@
                 </div>
             </a>
         </div>
-            <div class="div">
-                <h1 class="hello">Link me:</h1>
-                <textarea readonly><a href="https://nomaakip.neocities.org" target="_blank"><img src="https://raw.githubusercontent.com/Nomaakip/Nomaakip.github.io/refs/heads/main/images/Nouveau%20projet.png"></a></textarea>
-                <p class="p-desc">Button preview:</p>
-                <a href="https://nomaakip.neocities.org" class="button-link" target="_blank"><img src="https://raw.githubusercontent.com/Nomaakip/Nomaakip.github.io/refs/heads/main/images/Nouveau%20projet.png" class="button-preview"></a>
-            </div>
+        <p class="p-desc"> working hard to make look better,hope y'all will like it <3</p>
         </body>
 </html>
