--- a/post1.html
+++ b/post1.html
@@ -106,7 +106,7 @@
                 <p class="p-desc">Here are my goals:</p>
                 <p class="goals">Learn Kotlin</p>
                 <p class="goals">Learn more javascript and backend</p>
-                <p class="goals">Lean C</p>
-                <p class="goals">Lean python</p>
+                <p class="goals">Learn C</p>
+                <p class="goals">Learn python</p>
         </body>
 </html>
