--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <style>
     * {
-    background: url('images/9Szz-ezgif.com-gif-to-mp4-converter.mp4');
+    background: url('https://i.gifer.com/9Szz.gif');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: cover;
