--- a/index.html
+++ b/index.html
@@ -23,6 +23,44 @@
     align-items: center;
 
 }
+
+.github {
+    background: none;
+    height:50px;
+    margin-top: 20px;
+    box-shadow: 0px 0px 30px white;
+    border-radius: 50%;
+    transition: all .3s ease-in-out;
+    align-items: center;
+    justify-content: center;
+    margin-left:39%;
+}
+
+.github:hover {
+    transform: scale(1.1);
+    transform:
+      rotate3d(0,0,0,0deg)
+      rotate(0deg);
+}
+
+.discord {
+    background: none;
+    height:50px;
+    margin-bottom: -5px;
+    align-items: center;
+    justify-content: center;
+    filter: drop-shadow(#FFFFFF 1px 0 7px) !important;
+    border-radius: 50%;
+    transition: all .3s ease-in-out;
+}
+
+.discord:hover {
+    transform: scale(1.1);
+    transform:
+      rotate3d(0,0,0,0deg)
+      rotate(0deg);
+}
+
 .swag {
     height:200px;
     width:600px;
@@ -35,6 +73,20 @@
     align-items: center;
     justify-content: center;
     padding:30px;
+    animation:pop-in 0.5s ease;
+    transition:
+    transform .4s ease,
+    box-shadow .4s ease;
+}
+
+.swag:hover {
+    transform:
+    rotate3d(.5,-.866,0,15deg)
+    rotate(1deg);
+  box-shadow:
+    2em 4em 6em -2em rgba(0,0,0,.5),
+    1em 2em 3.5em -2.5em rgba(0,0,0,.5);
+  border-radius: .5em;
 }
 
 .username {
@@ -111,17 +163,13 @@ font-family: "Poppins", sans-serif;
     display: block;
     background-color: rgba(0, 0, 0, 0.464);
     display: none;
-    animation: anim .2s ease-in-out;
-}
-
-.heart + .heartsabt {
-animation: anim .2s ease-in-out;
+    animation:pop-in 0.5s ease;
 }
 
 .heart:hover + .heartsabt {
 display: block;
-animation: anim .2s ease-in-out;
 }
+
 
 @keyframes anim {
 0% {
@@ -170,6 +218,12 @@ background-color: aqua;
 100% {
 background-color: fuchsia;
 }
+
+}
+
+@keyframes pop-in {
+0% { opacity: 0;transform: scale(0.1); }
+100% { opacity: 1;transform: scale(1); }
 }
 </style>
     </head>
@@ -184,6 +238,8 @@ background-color: fuchsia;
             <div class="heartsabt">swag</div>
             </div>
             <h1 class="about">C++ and web developer</h1>
+            <a href="https://github.com/nomaakip" style="background: none;"><img src="images/github.png" class="github"></a>
+            <img src="images/f53497173cbd3e295990d985271cedda.png" class="discord">
         </div>
         </div>
     </body>
